# jepa-slm

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: datasets.yaml  deepspeed_h20_zero1.json  model_0_2b.yaml  model_0_2b_swiglu_ablation.yaml  model_homebench_0_1b.yaml  tokenizer.yaml  train_clean_local.yaml  train_clean_local_full.yaml  train_h20_4gpu.yaml  train_h20_4gpu_6gb.yaml  train_h20_4gpu_96gb.yaml  train_h20_8gpu.yaml  train_tiny_smoke.yaml
docs/: corpus_cleaning_and_0_2b_recipe.md  dataset_recommendation.md  h20_4gpu_training.md  h20_8gpu_training.md  jepa_encoder_decoder_training_loop.md  optimization_changes.md  tokenizer_training.md  training_pipeline.md
envs/: jepa-h20-cu124.yml  requirements-h20-optional.txt
reports/: activation_position_report.md  clean_corpus_manifest.json  dataset_recommendation.md  full_corpus_manifest.json  jepa_slm_research_ranking.json  jepa_slm_research_report.md  jepa_verification_report.md  model_design_search_report.md  small_model_verification_report.md  tokenizer_recommendation.md
scripts/: activation_position_agent.py  corpus_token_stats.py  dataset_recommender_agent.py  download_clean_corpus.sh  h20_sanity_check.py  install_h20_env.sh  jepa_research_agent.py  jepa_verifier_agent.py  launch_h20_4gpu.sh  launch_h20_8gpu.sh  launch_preflight.py  model_design_search_agent.py  prepare_clean_corpus.py  run_training.sh  small_model_verification_agent.py  tokenizer_recommender_agent.py  train_sentencepiece_tokenizer.py
tests/: test_checkpoint.py  test_config_loading.py  test_data_cleaning.py  (+4 more)
(+10 files in other folders)
