[project]
name = "jepa-slm"
version = "0.1.0"
description = "Research and verification tools for JEPA-augmented small encoder-decoder language models."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Luke" }]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
